# agentpatch-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: agentpatch.py
src/agentpatch/: __init__.py  cli.py  client.py  config.py
tests/: test_agentpatch.py  test_cli.py  test_client.py
